# api/models/user.js
@@ -1,0 +1,33 @@
+'use strict';
+module.exports = (sequelize, DataTypes) => {
+  const user = sequelize.define('user', {
+    name: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    },
+    username: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    },
+    email: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    },
+    hashed_pwd: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    },
+    salt: {
+      type: DataTypes.STRING,
+      allowNull: false,
+    }
+  });
+
+  user.associate = (models) => {
+    user.hasMany(models.location, {
+      foreignKey: 'userId',
+      onDelete: 'CASCADE',
+    });
+  };
+  return user;
+};
