# api/swagger/swagger.yaml
@@ -18,6 +18,102 @@ consumes:
 produces:
   - application/json
 paths:
+  /createUser:
+      # binds a127 app logic to a route
+    x-swagger-router-controller: userController
+    post:
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: createUser
+      parameters:
+        - in: body
+          name: user
+          description: The user to create.
+          schema:
+            type: object
+            required:
+              - name
+              - username
+              - email
+              - password
+            properties:
+              name:
+                type: string
+              username:
+                type: string
+              email:
+                type: string
+              password:
+                type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: object
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            type: object
+  /login:
+        # binds a127 app logic to a route
+      x-swagger-router-controller: userController
+      post:
+        description: Returns 'Hello' to the caller
+        # used as the method name of the controller
+        operationId: login
+        parameters:
+          - in: body
+            name: user
+            description: The user to create.
+            schema:
+              type: object
+              required:
+                - username
+                - password
+              properties:
+                username:
+                  type: string
+                password:
+                  type: string
+        responses:
+          "200":
+            description: Success
+            schema:
+              type: object
+          # responses may fall through to errors
+          default:
+            description: Error
+            schema:
+              type: object
+  /deleteUser:
+        # binds a127 app logic to a route
+      x-swagger-router-controller: userController
+      post:
+        description: Returns 'Hello' to the caller
+        # used as the method name of the controller
+        operationId: deleteUser
+        parameters:
+          - in: body
+            name: user
+            description: The user to create.
+            schema:
+              type: object
+              required:
+                - username
+              properties:
+                username:
+                  type: string
+        responses:
+          "200":
+            description: Success
+            schema:
+              type: object
+          # responses may fall through to errors
+          default:
+            description: Error
+            schema:
+              type: object
   /hello:
     # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
@@ -44,6 +140,7 @@ paths:
             $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
+
 # complex objects have schema definitions
 definitions:
   HelloWorldResponse:
